@@ -4,25 +4,32 @@ import com.backend.domain.repository.dto.response.RepositoryData;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 @Component
 public class ReadmeInfoMapper {
-
-    public void mapReadmeInfo(RepositoryData data, String readmeContent) {  // String으로 변경
+    // ResponseData 문서화 품질 [README 관련]
+    public void mapReadmeInfo(RepositoryData data, String readmeContent) {
         if (readmeContent == null || readmeContent.trim().isEmpty()) {
             setEmptyReadmeData(data);
             return;
         }
 
+        // README.md 존재 여부
         data.setHasReadme(true);
+        // README.md 전체 내용
         data.setReadmeContent(readmeContent);
+        // README.md 글자 수
         data.setReadmeLength(readmeContent.length());
 
+
         List<String> sectionTitles = extractSectionTitles(readmeContent);
+        // README.md # 개수
         data.setReadmeSectionCount(sectionTitles.size());
+        // README.md 섹션 제목 리스트
         data.setReadmeSectionTitles(sectionTitles);
     }
 
@@ -30,7 +37,7 @@ public class ReadmeInfoMapper {
         data.setHasReadme(false);
         data.setReadmeLength(0);
         data.setReadmeSectionCount(0);
-        data.setReadmeSectionTitles(List.of());
+        data.setReadmeSectionTitles(Collections.emptyList());
         data.setReadmeContent("");
     }
 
